[package]
name = "pyrust-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrust_csv"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.0"
pyo3 = "0.23"
serde = { version = "1.0.197", features = ["derive"] }
